--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,7 @@ body {
 .send-icon {
   margin-left: 16px;
 }
+/* modal */
 .modal-window {
   position: fixed;
   top: 0;
@@ -520,7 +521,8 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
   padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-button:hover,
 .modal-button:focus {
@@ -531,7 +533,7 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #ffffff;
 }
-.modal-text{
+.modal-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -539,24 +541,25 @@ body {
   text-align: center;
   color: #2e2f42;
   margin-bottom: 16px;
-
 }
-.modal-inputs{
-  margin-bottom: 8px; 
+.modal-inputs {
+  margin-bottom: 16px;
 }
-.modal-label{
+.modal-checkbox-div {
+  margin-bottom: 24px;
+}
+.modal-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
   display: block;
-
 }
-.input-icon{
+.input-icon {
   position: relative;
 }
-.modal-input{
+.modal-input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -565,25 +568,24 @@ body {
   padding-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
-.modal-input:focus{
+.modal-input:focus {
   border-color: #4d5ae5;
 }
-.modal-svg{
+.modal-svg {
   position: absolute;
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus + .modal-svg{
+.modal-input:focus + .modal-svg {
   fill: #4d5ae5;
 }
-.input-icon-area{
+.input-icon-area {
   margin-bottom: 16px;
 }
-.modal-textarea{
+.modal-textarea {
   width: 100%;
   height: 120px;
   font-size: 12px;
@@ -598,41 +600,41 @@ body {
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-textarea:focus{
+.modal-textarea:focus {
   border-color: #4d5ae5;
 }
-.modal-checkbox-input{
+.modal-checkbox-input {
   margin-bottom: 24px;
 }
-.modal-checkbox-label{
+.modal-checkbox-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
-.check-box{
+.check-box {
   width: 16px;
   height: 16px;
   border-radius: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
-
-
 }
-.modal-checkbox-input:checked + .check-box{
+.modal-checkbox-input:checked + .check-box {
   background-color: #404bbf;
   border: none;
   fill: #f4f4f4;
 }
-.privacy-policy{
+.privacy-policy {
   color: #4d5ae5;
   text-decoration: underline;
 }
-.modal-submit{
+.modal-submit {
   display: block;
   min-width: 169px;
   height: 56px;
