--- a/css/styles.css
+++ b/css/styles.css
@@ -543,7 +543,7 @@ body {
   margin-bottom: 16px;
 }
 .modal-inputs {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 .modal-checkbox-div {
   margin-bottom: 24px;
@@ -615,7 +615,8 @@ body {
 .check-box {
   width: 16px;
   height: 16px;
-  border-radius: 1px solid rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
   margin-right: 2px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
