--- a/css/styles.css
+++ b/css/styles.css
@@ -627,7 +627,7 @@ body {
   justify-content: center;
   fill: transparent;
 }
-.modal-checkbox-input:checked + .check-box {
+.modal-checkbox-input:checked ~ .check-box {
   background-color: #404bbf;
   border: none;
   fill: #f4f4f4;
