--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,10 @@ img {
 }
 .header-container {
   display: flex;
+  height: 50px;
+  justify-content: space-between;
+  align-items: center;
+  
 }
 .container {
   width: 1158px;
@@ -446,6 +450,9 @@ body {
   display: flex;
   gap: 24px;
 }
+.form-footer{
+  margin-left: 80px;
+}
 .form-footer-input {
   width: 264px;
   height: 40px;
@@ -458,6 +465,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: #ffffff;
+  
 }
 .form-footer-button {
   min-width: 165px;
