--- a/css/styles.css
+++ b/css/styles.css
@@ -34,17 +34,60 @@ img {
   height: 50px;
   justify-content: space-between;
   align-items: center;
-  
 }
 .container {
-  width: 1158px;
+  max-width: 320px;
   margin: 0 auto;
-  padding: 0 15px;
 }
-/* nav */
+/* burger menü icon */
+.burger {
+  background-color: transparent;
+  border: none;
+  
+}
+/* burger menü açık */
+.mob-menu{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: white;
+  visibility: hidden;
+}
+.mob-menu.is-open{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: white;
+  visibility: visible;
+}
+.mob-menu-upper{}
 
+@media screen and (min-width: 768px) {
+  .burger {
+    display: none;
+  }
+  .nav-bar {
+    display: flex;
+  }
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+  }
+  
+}
+/* navigation */
 .nav-bar {
-  display: flex;
+  display: none;
   align-items: center;
 }
 .nav-list {
@@ -111,7 +154,7 @@ body {
 .button-style:focus {
   background-color: #404bbf;
   color: #ffffff;
-  cursor: pointer; /* Change this to your desired color */
+  cursor: pointer;
 }
 .visually-hidden {
   position: absolute;
@@ -450,7 +493,7 @@ body {
   display: flex;
   gap: 24px;
 }
-.form-footer{
+.form-footer {
   margin-left: 80px;
 }
 .form-footer-input {
@@ -465,7 +508,6 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: #ffffff;
-  
 }
 .form-footer-button {
   min-width: 165px;
@@ -492,6 +534,7 @@ body {
 }
 /* modal */
 .modal-window {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -502,6 +545,7 @@ body {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-container {
+  display: none;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -553,7 +597,7 @@ body {
 .modal-inputs {
   margin-bottom: 8px;
 }
-.modal-inputs-text{
+.modal-inputs-text {
   margin-bottom: 16px;
 }
 .modal-checkbox-div {
@@ -629,7 +673,9 @@ body {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   margin-right: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: center;
   justify-content: center;
